# iridium

./: LICENSE  README  README.md  SimpleIR.hs  chill.cabal  iridium.cabal  proglang-backend.cabal
IR/Common/: GC.hs  Operator.hs  Operators.hs  Ptr.hs
IR/FlatIR/: LLVMGen.hs  Syntax.hs
IR/FlatIR/LLVMGen/: CodeGen.hs  ConstValue.hs  Dwarf.hsc  GCAccessors.hs  GCHeaders.hs  Globals.hs  MemAccess.hs  Metadata.hs  Types.hs  Utils.hs  VarAccess.hs
IR/GC/: Types.hs
IR/PolyIR/: Syntax.hs
IR/SimpleIR/: Syntax.hs
SimpleIR/: LLVMGen.hs
SimpleIR/LLVMGen/: CodeGen.hs  ConstValue.hs  GCAccessors.hs  GCHeaders.hs  Globals.hs  LLVMValue.hs  Metadata.hs  Types.hs  Utils.hs  VarAccess.hs
src/Control/Monad/: CompileParams.hs
src/Control/Monad/CompileParams/: Class.hs
src/Control/Monad/LLVMGen/: Globals.hs  Metadata.hs
src/Control/Monad/LLVMGen/Globals/: Class.hs
src/Control/Monad/LLVMGen/Metadata/: Class.hs  Debug.hs
src/Control/Monad/LLVMGen/Metadata/Debug/: Class.hs
src/Control/Monad/LLVMGen/Types/: Class.hs
src/IR/Common/: Alloc.hs  Body.hs  GC.hs  LValue.hs  Names.hs  Operator.hs  Ptr.hs  Rename.hs  RenameType.hs  TBAA.hs  Transfer.hs
src/IR/Common/Rename/: Class.hs
src/IR/Common/RenameType/: Class.hs
src/IR/FlatIR/: LLVMGen.hs  Location.hs  SSAConvert.hs  Syntax.hs
src/IR/FlatIR/LLVMGen/: CodeGen.hs  ConstValue.hs  Context.hs  GCAccessors.hs  GCHeaders.hs  Globals.hs  LLVMValue.hs  MemAccess.hs  Metadata.hs  TBAA.hs  Tags.hs  Types.hs  Utils.hs  VarAccess.hs
src/IR/PolyIR/: Syntax.hs
src/IR/SimpleIR/: Syntax.hs
