Name:                chill
Version:             0.2.0.0
Synopsis:            Intermediate representations and facilities for
                     compiling programming languages
Description:
  This package contains intermediate representations, transformations,
  and compilation utilities.  It is intended to be used to compile
  programming languages down to LLVM.

  This package is a work in progress.
License:             GPL
Author:              Eric McCorkle
Maintainer:          eric@metricspace.net
Stability:           Pre-alpha
Category:            Development
Build-type:          Simple
Cabal-version:       >= 1.9.2

Library
  build-depends:        base, mtl, hashable, fgl, array, prelude-extras,
                        compiler-misc, containers, hashable-extras, hexpat,
                        hexpat-pickle
  hs-source-dirs:       src
  exposed-modules:      IR.Common.Body
                        IR.Common.LValue,
                        IR.Common.Names,
                        IR.Common.Ptr,
                        IR.Common.Operator,
                        IR.Common.Rename,
                        IR.Common.Rename.Class,
                        IR.Common.RenameType,
                        IR.Common.RenameType.Class
                        IR.Common.Transfer
--                        IR.FlatIR.Syntax
--                        IR.FlatIR.SSAConvert
--                        IR.FlatIR.LLVMGen
--                        IR.FlatIR.LLVMGen.CodeGen,
--                        IR.FlatIR.LLVMGen.ConstValue,
--                        IR.FlatIR.LLVMGen.GCAccessors,
--                        IR.FlatIR.LLVMGen.GCHeaders,
--                        IR.FlatIR.LLVMGen.Globals,
--                        IR.FlatIR.LLVMGen.LLVMValue,
--                        IR.FlatIR.LLVMGen.MemAccess,
--                        IR.FlatIR.LLVMGen.Metadata,
--                        IR.FlatIR.LLVMGen.Types,
--                        IR.FlatIR.LLVMGen.Utils
--                        IR.FlatIR.LLVMGen.VarAccess
