Name:                iridium
Version:             0.0.0
Synopsis:            Intermediate representations and facilities for
                     compiling programming languages
Description:
  This package contains intermediate representations, transformations,
  and compilation utilities.  It is intended to be used to compile
  programming languages down to LLVM.

  This package is a work in progress.
License:             GPL
Author:              Eric McCorkle
Maintainer:          eric@metricspace.net
Stability:           Pre-alpha
Category:            Development
Build-type:          Simple
Cabal-version:       >= 1.9.2

Library
  build-depends:        base, mtl, hashable, fgl, array, prelude-extras,
                        compiler-toolbox, containers, hexpat, hexpat-pickle,
                        bytestring, unordered-containers, utf8-string,
                        hashtables, dynamic-pprint, monad-journal, llvm-hs-pure
  hs-source-dirs:       src
  exposed-modules:      Control.Monad.CompileParams
                        Control.Monad.CompileParams.Class
                        Control.Monad.LLVMGen.Globals
                        Control.Monad.LLVMGen.Globals.Class
                        Control.Monad.LLVMGen.Metadata
                        Control.Monad.LLVMGen.Metadata.Class
--                        Control.Monad.LLVMGen.Metadata.Debug
                        Control.Monad.LLVMGen.Metadata.Debug.Class
                        Control.Monad.LLVMGen.TypeDefs.Class
                        IR.Common.Alloc
                        IR.Common.Body
                        IR.Common.GC
                        IR.Common.LValue,
                        IR.Common.Names,
                        IR.Common.Ptr,
                        IR.Common.Operator,
                        IR.Common.Rename,
                        IR.Common.Rename.Class,
                        IR.Common.RenameType,
                        IR.Common.RenameType.Class
                        IR.Common.TBAA
                        IR.Common.Transfer
                        IR.FlatIR.Syntax
--                        IR.FlatIR.LLVMGen.Context
--                        IR.FlatIR.LLVMGen.TBAA
--                        IR.FlatIR.SSAConvert
--                        IR.FlatIR.LLVMGen
--                        IR.FlatIR.LLVMGen.CodeGen,
--                        IR.FlatIR.LLVMGen.ConstValue,
--                        IR.FlatIR.LLVMGen.GCAccessors,
--                        IR.FlatIR.LLVMGen.GCHeaders,
--                        IR.FlatIR.LLVMGen.Globals,
--                        IR.FlatIR.LLVMGen.LLVMValue,
--                        IR.FlatIR.LLVMGen.MemAccess,
--                        IR.FlatIR.LLVMGen.Metadata,
                        IR.FlatIR.LLVMGen.Types
--                        IR.FlatIR.LLVMGen.Utils
--                        IR.FlatIR.LLVMGen.VarAccess
